--- a/src/app/components/properties-grid/properties-grid.component.html
+++ b/src/app/components/properties-grid/properties-grid.component.html
@@ -1,13 +1,9 @@
-<div
-  class="properties-grid view-grid active"
-  data-aos="fade-up"
-  data-aos-delay="200"
->
-  <div class="row g-4">
-    @for(room of rooms(); track room.id){
-    <div class="col-lg-4 col-md-4">
-      <app-property-card [room]="room"></app-property-card>
+<div class="properties-grid view-grid active" data-aos="fade-up" data-aos-delay="200">
+    <div class="row g-4">
+        @for(vm of rooms(); track vm.room.id){
+        <div class="col-lg-4 col-md-4">
+            <app-property-card [vm]="vm" (favoriteToggle)="favoriteToggle.emit(vm.room.id)"></app-property-card>
+        </div>
+        }
     </div>
-    }
-  </div>
 </div>
