--- a/src/app/components/title/title.component.html
+++ b/src/app/components/title/title.component.html
@@ -1,25 +1,7 @@
-<div class="page-title">
-  <div class="heading">
-    <div class="container">
-      <div class="row d-flex justify-content-center text-center">
-        <div class="col-lg-8">
-          <h1 class="heading-title">Properties</h1>
-          <p class="mb-0">
-            Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo
-            odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum
-            debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat
-            ipsum dolorem.
-          </p>
-        </div>
-      </div>
-    </div>
+<section class="page-hero">
+  <div class="hero-overlay"></div>
+
+  <div class="hero-content">
+    
   </div>
-  <nav class="breadcrumbs">
-    <div class="container">
-      <ol>
-        <li><a href="index.html">Home</a></li>
-        <li class="current">Properties</li>
-      </ol>
-    </div>
-  </nav>
-</div>
+</section>
